src/index.css
body{
  height: 100%;
  width: 100%;
  min-height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  /* background-color: #93C5ED; */
  background-image: url("https://upload.wikimedia.org/wikipedia/commons/5/5d/Low_Memorial_Library_Columbia_University_College_Walk_Court_Yard_05.jpg");
  background-size: 100%;
  background-repeat: no-repeat;
  font-family:'Courier New', Courier, monospace;
}

nav{
  color: antiquewhite;
  text-align: center;
  text-shadow: 0.15rem 0.15rem black;
  font-size: 2rem;
}

main {
  width: 40rem;
  height: 64rem;
  background-color: #ffffff;
  -webkit-box-shadow: 0px 5px 15px 8px #e4e7fb;
  box-shadow: 0px 5px 15px 8px #e4e7fb;
  display: flex;
  flex-direction: column;
  align-items: center;
  border-radius: 0.5rem;
  margin-left: auto;
  margin-right: auto;
}

.main-header {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 1.5rem 1rem;
  color: #264c77;
  font-family:'Courier New', Courier, monospace;
}


.main-leaderboard{
  width: 100%;
  position: relative;
}

table {
  width: 100%;
  border-collapse: collapse;
  table-layout: fixed;
  color: #141a39;
  cursor: default;
}


tr {
  transition: all 0.2s ease-in-out;
  border-radius: 0.2rem;
}

tr:not(:first-child):hover {
  background-color: #fff;
  transform: scale(1.1);
  -webkit-box-shadow: 0px 5px 15px 8px #e4e7fb;
  box-shadow: 0px 5px 15px 8px #e4e7fb;
}

tr:nth-child(odd) {
  background-color: #f9f9f9;
}

tr:nth-child(1) {
  color: #fff;
}

td {
  height: 5rem;
  font-family: 'Courier New', Courier, monospace;
  font-size: 1.4rem;
  padding: 1rem 2rem;
  position: relative;
}

.picture{
  height: 4rem;
  width: 4rem;
  border: 1px solid #B6B2AC;
  border-radius: 100%;
}

.number {
  width: 1rem;
  font-size: 2.2rem;
  font-weight: bold;
  text-align: left;
}

.name {
  text-align: left;
  font-size: 1.7rem;
}

.points {
  font-weight: bold;
  font-size: 1.3rem;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.gold-medal {
  height: 3rem;
  margin-left: 2rem;
}

.points:first-child {
  width: 10rem;
}

.ribbon {
  width: 42rem;
  height: 6.5rem;
  top: -0.5rem;
  background-color: #264c77;
  position: absolute;
  left: -1rem;
  -webkit-box-shadow: 0px 15px 11px -6px #7a7a7d;
  box-shadow: 0px 15px 11px -6px #7a7a7d;
}

.ribbon::before {
  content: "";
  height: 1.5rem;
  width: 1.5rem;
  bottom: -0.8rem;
  left: 0.35rem;
  transform: rotate(45deg);
  background-color: #5c5be5;
  position: absolute;
  z-index: -1;
}

.ribbon::after {
  content: "";
  height: 1.5rem;
  width: 1.5rem;
  bottom: -0.8rem;
  right: 0.35rem;
  transform: rotate(45deg);
  background-color: #5c5be5;
  position: absolute;
  z-index: -1;
}

